# piskworky

./: .gitignore  CMakeLists.txt  README.md  a.out  computer_player.cpp  computer_player.h  console_comunicator.cpp  console_comunicator.h  coordinate.h  human_player.cpp  human_player.h  main.cpp  player.h  playground.cpp  playground.h  point.h  user_interface.cpp
src/: main.cpp  piskworky  player.h  playground.cpp  user_interface.cpp  user_interface.h
